# aocl-libm-ose

./: .gitignore  BUILDING.md  BUILDING.txt  BUILDING_on_Linux.txt  BUILDING_on_Win.txt  BUILDING_on_Windows.txt  CMakeLists.txt  CMakePresets.json  COPYRIGHT.txt  LICENSE  LICENSE.txt  NOTICE.txt  NOTICES  SConstruct
almbench/: CMakeLists.txt
almbench/config/: generic.yml  master.yml
almbench/config/acos/: acos_accu.yml  acos_conf.yml  acos_perf.yml
almbench/config/acosh/: acosh_accu.yml  acosh_conf.yml  acosh_perf.yml
almbench/config/add/: add_accu.yml  add_perf.yml
almbench/config/asin/: asin_accu.yml  asin_conf.yml  asin_perf.yml
almbench/config/asinh/: asinh_accu.yml  asinh_conf.yml  asinh_perf.yml
almbench/config/atan/: atan_accu.yml  atan_conf.yml  atan_perf.yml
almbench/config/atan2/: atan2_accu.yml  atan2_conf.yml  atan2_perf.yml
almbench/config/atanh/: atanh_accu.yml  atanh_conf.yml  atanh_perf.yml
almbench/config/cbrt/: cbrt_accu.yml  cbrt_conf.yml  cbrt_perf.yml
almbench/config/ceil/: ceil_accu.yml  ceil_conf.yml  ceil_perf.yml
almbench/config/copysign/: copysign_accu.yml  copysign_conf.yml  copysign_perf.yml
almbench/config/cos/: cos_accu.yml  cos_conf.yml  cos_perf.yml
almbench/config/cosh/: cosh_accu.yml  cosh_conf.yml  cosh_perf.yml
almbench/config/erf/: erf_accu.yml  erf_conf.yml  erf_perf.yml
almbench/scripts/: read_parser.py
almbench/src/: api_prototype_01.cc  api_prototype_02.cc  api_prototype_03.cc  api_prototype_04.cc  api_prototype_05.cc  api_prototype_06.cc  api_runner.cc  api_validator.cc  generator.cc  hrt_utils.cc  libm_process.cc  main.cc  packer.cc  ulp.cc  verify.cc  yaml_read.cc  yaml_write.cc
docs/src/: CMakeLists.txt  Doxyfile.in  README.md  conf.py.in  index.rst
examples/: CMakeLists.txt
examples/src/: use_acos.c  use_add.c  use_asin.c  use_asinh.c  use_atan.c  use_atan2.c  use_cbrt.c  use_ceil.c  use_copysign.c  use_cos.c  use_cosh.c  use_div.c  use_erf.c  use_exp.c  use_exp10.c  use_exp2.c  use_fabs.c  use_fdim.c  use_fmax.c  use_fmin.c  use_hypot.c  use_log.c  use_log1p.c  use_log2.c  use_mul.c  use_nearbyint.c  use_pow.c  use_remainder.c  use_round.c  use_sin.c  use_sincos.c  use_sinh.c  use_sqrt.c  use_sub.c  use_tan.c  use_tanh.c  use_trunc.c
gtests/: CMakeLists.txt  README  SConscript  almtesttype.cc  cmdline.cc  filter.cc  func_var_existence.cc  gtest_main.cc  main.cc  random.cc  ulp.cc  verify.cc
gtests/Gtest_srcs/: gtest_accu.cc  gtest_main_vec_arr.cc
gtests/acos/: SConscript  acos_callback.cc  acos_perf.cc
gtests/acosh/: acosh_callback.cc
gtests/add/: add_callback.cc
gtests/asin/: SConscript  asin_callback.cc  asin_perf.cc
gtests/asinh/: asinh_callback.cc
gtests/atan/: SConscript  atan_callback.cc  atan_perf.cc
gtests/atan2/: atan2_callback.cc
gtests/atanh/: atanh_callback.cc
gtests/cbrt/: cbrt_callback.cc
gtests/cdfnorm/: SConscript  cdfnorm_callback.cc  cdfnorm_perf.cc  test_cdfnorm_data.h
gtests/cdfnorminv/: SConscript  cdfnorminv_callback.cc  cdfnorminv_perf.cc  test_cdfnorminv_data.h
gtests/ceil/: ceil_callback.cc
gtests/cexp/: cexp_callback.cc  test_cexp_data.h
gtests/compat/: CMakeLists.txt
gtests/copysign/: copysign_callback.cc
gtests/cos/: cos_callback.cc  test_cos_data.h
gtests/cosh/: SConscript  cosh_callback.cc  cosh_perf.cc
gtests/dynamic/: CMakeLists.txt
gtests/erf/: SConscript  erf_callback.cc  erf_perf.cc
gtests/erfc/: SConscript  erfc_callback.cc  erfc_perf.cc  test_erfc_data.h
gtests/erfcinv/: SConscript  erfcinv_callback.cc  erfcinv_perf.cc  test_erfcinv_data.h
gtests/erfinv/: SConscript  erfinv_callback.cc  erfinv_perf.cc  test_erfinv_data.h
gtests/exp/: exp_callback.cc
gtests/exp10/: exp10_callback.cc
gtests/exp2/: exp2_callback.cc
gtests/expm1/: expm1_callback.cc
gtests/fabs/: fabs_callback.cc
gtests/fdim/: fdim_callback.cc
gtests/floor/: floor_callback.cc
gtests/fmax/: fmax_callback.cc
gtests/fmin/: fmin_callback.cc
gtests/fmod/: fmod_callback.cc
gtests/gapi/: CMakeLists.txt  Cct_GtestGbench.cmake
gtests/hypot/: hypot_callback.cc
gtests/include/: almstruct.h  almtest.h  almtestperf.h  callback.h  func_var_existence.h  verify.h
gtests/ldexp/: ldexp_callback.cc
gtests/linearfrac/: gbench_linearfrac.cc  gtest_linearfrac.cc  linearfrac.h  linearfrac_callback.cc  test_linearfrac_data.h
gtests/log/: log_callback.cc
gtests/log10/: log10_callback.cc
gtests/log1p/: log1p_callback.cc  log1p_perf.cc
gtests/log2/: log2_callback.cc
gtests/logb/: logb_callback.cc
gtests/mul/: mul_callback.cc
gtests/nearbyint/: nearbyint_callback.cc
gtests/nextafter/: nextafter_callback.cc
gtests/pow/: pow_callback.cc
gtests/powx/: gbench_powx.cc  gtest_powx.cc  powx_callback.cc
gtests/remainder/: remainder_callback.cc
gtests/rint/: rint_callback.cc
gtests/round/: SConscript  round_callback.cc  round_perf.cc  test_round_data.h
gtests/sin/: sin_callback.cc
gtests/sincos/: gbench_sincos.cc  gtest_sincos.cc  sincos.h  sincos_callback.cc
gtests/sinh/: sinh_callback.cc
gtests/sqrt/: sqrt_callback.cc
gtests/sub/: sub_callback.cc
gtests/tan/: SConscript  tan_callback.cc  tan_perf.cc
gtests/tanh/: SConscript  tanh_callback.cc  tanh_perf.cc
gtests/trunc/: trunc_callback.cc
src/: CMakeLists.txt  SConscript  alm_special.c  alm_version.h  buildsysinfo.h  entry_pt.c  entry_pt_macros.h  entry_pt_map.c  iface.c
src/compat/: CMakeLists.txt
src/fast/: CMakeLists.txt
src/iface/: acos.c  acosh.c  add.c  addi.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  cbrt.c  cdfnorm.c  cdfnorminv.c  ceil.c  cexp.c  clog.c  copysign.c  cos.c  cosh.c  cpow.c  div.c  divi.c  erf.c  erfc.c  erfcinv.c  erfinv.c  exp.c  exp10.c  exp2.c  expm1.c  fabs.c  floor.c  fmax.c  fmaxi.c  fmin.c  fmini.c  fmod.c  hypot.c  ilogb.c  linearfrac.c  log.c  (+21 more)
src/isa/: CMakeLists.txt  SConscript
src/optimized/: CMakeLists.txt  SConscript  atan2.c  cdfnorm.c  cdfnorminv.c  erfc.c  erfcf.c  erfcinv.c  erfinv.c  erfinv_data.h  expm1.c  fmod.c  fmodf.c  remainderf.c  round.c  roundf.c  tanhf.c
src/ref/: atan2.c  atan2f.c  round.c  roundf.c
(+963 files in other folders)
